@@ -1,43 +1,30 @@
 #!/usr/bin/env python
 # unix_ftpd.py
 
-"""FTPd using local unix account database to authenticate users and get
-their home directories (users must be created previously).
+"""A ftpd using local unix account database to authenticate users and get
+their home directories (users must already exist).
 """
 
 import os
 import pwd, spwd, crypt
+
 from pyftpdlib import ftpserver
 
 
 class UnixAuthorizer(ftpserver.DummyAuthorizer):
 
-    def __init__(self):
-        ftpserver.DummyAuthorizer.__init__(self)
-
     def add_user(self, username, home='', perm=('r')):
-        assert username in [i[0] for i in pwd.getpwall()], 'No such user "%s".' %username
-        pw = spwd.getspnam(username).sp_pwd
-        if not home:
-            home = pwd.getpwnam(username).pw_dir
-        assert os.path.isdir(home), 'No such directory "%s".' %home
-        dic = {'pwd'  : pw,
-               'home' : home,
-               'perm' : perm
-               }
-        self.user_table[username] = dic
+        # get the list of all available users on the system and check if
+        # username provided exists
+        users = [entry.pw_name for entry in pwd.getpwall()]
+        if not username in users:
+             raise ftpserver.AuthorizerError('No such user "%s".' %username)
+        ftpserver.DummyAuthorizer.add_user(self, username, '', home, perm)
 
     def validate_authentication(self, username, password):
-        if username == 'anonymous':
-            if self.has_user('anonymous'):
-                return 1
-            else:
-                return 0
-        else:
-            pw1 = spwd.getspnam(username).sp_pwd
-            pw2 = crypt.crypt(password, pw1)
-            return pw1 == pw2
-
+        pw1 = spwd.getspnam(username).sp_pwd
+        pw2 = crypt.crypt(password, pw1)
+        return pw1 == pw2
 
 if __name__ == "__main__":
     authorizer = UnixAuthorizer()
